Add sword (in the future I will need to adjust the damage rect)